# nfrs

./: .gitignore  WINDOWS_GUIDE.md  walkthrough.md
nfrs/: .dockerignore  CERTIFICATES.md  Cargo.toml  cert.pem  docker-compose.yml  generate_cert.sh  key.pem
nfrs/nfrs_client/: Cargo.toml  Dockerfile  Trunk.toml  build.rs  index.html  nginx.conf
nfrs/nfrs_client/src/: main.rs
nfrs/nfrs_server/: Cargo.toml  Dockerfile
nfrs/nfrs_server/src/: car.rs  main.rs
nfrs/nfrs_shared/: Cargo.toml
nfrs/nfrs_shared/src/: lib.rs
