[package]
name = "nfrs_client"
version = "0.1.0"
edition = "2021"

[dependencies]
nfrs_shared = { path = "../nfrs_shared" }
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "multi_threaded",
    "x11",
    "bevy_gizmos",
    "webgl2",
] }
lightyear = { version = "0.24", features = ["client", "netcode", "replication", "udp", "webtransport", "input_native"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
tracing-wasm = "0.2"

[build-dependencies]
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
