[package]
name = "nfrs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
nfrs_shared = { path = "../nfrs_shared" }
bevy = { version = "0.16", default-features = false, features = ["multi_threaded"] }
bevy_rapier2d = { version = "0.31", features = ["simd-stable", "debug-render-2d"] }
lightyear = { version = "0.24", features = ["server", "netcode", "replication", "udp", "webtransport", "input_native"] }
wtransport = "0.6.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

rand = "0.8"
